--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -8,11 +8,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
+    - name: Sample secrets
+    - uses: actions/checkout@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-    - name: List S3 Buckets
-      run: aws s3api list-buckets
+        not-so-secret: ${{ secrets.NOT_SO_SECRET }}
+        another-not-so-secret: ${{ secrets.ANOTHER_NOT_SO_SECRET }}
+      run: |
+        echo not-so-secret
+        another-not-so-secret
+    # - name: Configure AWS Credentials
+    #   uses: aws-actions/configure-aws-credentials@v1
+    #   with:
+    #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #     aws-region: ${{ secrets.AWS_REGION }}
+    # - name: List S3 Buckets
+    #   run: aws s3api list-buckets
