--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -9,13 +9,14 @@ jobs:
 
     steps:
     - name: Sample secrets
-    - uses: actions/checkout@v1
+      uses: actions/checkout@v1
       with:
         not-so-secret: ${{ secrets.NOT_SO_SECRET }}
         another-not-so-secret: ${{ secrets.ANOTHER_NOT_SO_SECRET }}
       run: |
         echo not-so-secret
         another-not-so-secret
+
     # - name: Configure AWS Credentials
     #   uses: aws-actions/configure-aws-credentials@v1
     #   with:
