--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -8,11 +8,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Sample secrets
+    - name: Define secrets
       uses: actions/checkout@v1
       with:
         not-so-secret: ${{ secrets.NOT_SO_SECRET }}
         another-not-so-secret: ${{ secrets.ANOTHER_NOT_SO_SECRET }}
+    - name: Print secrets
       run: |
         echo not-so-secret
         another-not-so-secret
