--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -9,14 +9,13 @@ jobs:
 
     steps:
     - name: Define secrets
-      uses: actions/checkout@v1
-      with:
-        not-so-secret: ${{ secrets.NOT_SO_SECRET }}
-        another-not-so-secret: ${{ secrets.ANOTHER_NOT_SO_SECRET }}
+      env: 
+        NOT_SO_SECRET: ${{ secrets.NOT_SO_SECRET }}
+        ANOTHER_NOT_SO_SECRET: ${{ secrets.ANOTHER_NOT_SO_SECRET }}
     - name: Print secrets
       run: |
-        echo not-so-secret
-        another-not-so-secret
+        echo "${{ env.NOT_SO_SECRET }}"
+        echo "${{ env.ANOTHER_NOT_SO_SECRET }}"
 
     # - name: Configure AWS Credentials
     #   uses: aws-actions/configure-aws-credentials@v1
