--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v1
     - name: Define secrets
       env: 
         NOT_SO_SECRET: ${{ secrets.NOT_SO_SECRET }}
