--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -8,12 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
     - name: Define secrets
+      uses: actions/checkout@v1
       env: 
         NOT_SO_SECRET: ${{ secrets.NOT_SO_SECRET }}
         ANOTHER_NOT_SO_SECRET: ${{ secrets.ANOTHER_NOT_SO_SECRET }}
     - name: Print secrets
+      uses: actions/checkout@v1
       run: |
         echo "${{ env.NOT_SO_SECRET }}"
         echo "${{ env.ANOTHER_NOT_SO_SECRET }}"
